...
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/progress_bar_item_favorite_user_score"
            app:layout_constraintStart_toEndOf="@+id/progress_bar_item_favorite_user_score"
            app:layout_constraintTop_toTopOf="@+id/progress_bar_item_favorite_user_score" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ib_item_favorite_favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_favorite"
...
