<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_favorite_tv_show_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_favorite_layout"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_network_error"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_tv_show_favorite_not_found"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:padding="30dp"
        android:src="@drawable/ic_undraw_empty_xct9"
        app:layout_constraintTop_toBottomOf="@+id/guideline_network_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_tv_show_favorite_not_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorite_tv_show_not_found"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintTop_toBottomOf="@+id/iv_tv_show_favorite_not_found"/>

</androidx.constraintlayout.widget.ConstraintLayout>